# cs_231n-stanford

./: .gitignore  pyproject.toml
assignment1/: features.ipynb  softmax.ipynb  svm.ipynb  two_layer_net.ipynb
assignment1/cs231n/: features.py  gradient_check.py  layers.py  optim.py
assignment1/cs231n/classifiers/: fc_net.py  k_nearest_neighbor.py  linear_classifier.py  linear_svm.py  softmax.py
assignment2/: BatchNormalization.ipynb  FullyConnectedNets.ipynb  test.py
assignment2/cs231n/: data_utils.py  fast_layers.py  gradient_check.py  image_utils.py  layer_utils.py  layers.py  optim.py  solver.py  vis_utils.py
assignment2/cs231n/classifiers/: fc_net.py
