[project]
name = "cs-231n-stanford"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "imageio>=2.37.0",
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "requests>=2.32.3",
    "torch>=2.6.0",
]
